# DocuMind

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
api/: main.py
config/: settings.py
core/: indexing.py  retrieval.py
prompts/: system_prompt.txt
server/: server.py
ui/: app.py
worker/: main.py
